<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/span_count_1"
        android:title="@string/span_count1"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/span_count_2"
        android:title="@string/span_count2"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/span_count_3"
        android:title="@string/span_count3"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/span_count_4"
        android:title="@string/span_count4"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/span_count_5"
        android:title="@string/span_count5"
        app:showAsAction="never">
    </item>
</menu>