<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.taijoo.potfolioproject.util.dialog.MemoDeleteMessageBox" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            android:background="@color/color_1D74E8"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="17sp"
                    android:textColor="@color/color_000000"
                    android:textStyle="bold"
                    android:text="@{activity.title_text}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:textColor="@color/color_000000"
                    android:text="@string/delete_message_content"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="end">

                    <TextView
                        android:id="@+id/frmNo"
                        android:text="@string/cancel"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/color_5b9aee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/frmOk"
                        android:text="@string/delete"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/color_F05548"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </LinearLayout>



        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>